v6.8
-----


v6.7
-----
+ Lots of stuff, basically it supports the new store
: Updated almost every existing function to account for the new store
- A few things that are no longer required due to the new store

v6.6.1
-----
+ Added SteamCardExchange link to applicable app pages
+ Added basic support for upcomming store currencies
: Updated SteamDB icon on store page buttons
: Fixed a bug caused by Steam_Language cookie not being present for all users

v6.6
-----
+ Added support for Japanese Yen in regional price comparison feature
+ Added Yen support for pack split calculations
+ Added Yen support for custom wallet amounts
+ Added Yen support for coupon messages
+ Added Yen support for calculating your bundle savings based on games you own
+ Added Yen support for badge pages
+ Re-wrote total account spent feature to accommodate purchases in multiple currencies
: Fixed a bug that caused DLC checkboxes not to work correctly due to a change made by Valve
: Fixed a bug that caused highlighting to break for users with private profiles
: Fixed an issue where cached inventory data would persist past its expiration
: Fixed a bug with active market totals for some users with certain currencies
: Fixed a bug where achievement sorting wouldn't work under certain circumstances
: Fixed a bug which caused the regional price comparison feature not to work on the daily deal

v6.5
-----
+ Added the ability to add notes to games on your wishlist
+ Added current price data when viewing a Steam gift in inventory
: Fixed a bug where Metacritic scores would sometimes show incorrectly
: Fixed a bug that caused achievement sorting not to work correctly
: Fixed active market listing total to work with new data format
: Fixed a bug that would sometimes cause you not to be able to remove an item from your wishlist
: Updated highlighting code to be more robust
- Removed button to delete owned games from wishlist, as Steam now does this automatically