@@ -1063,7 +1063,6 @@ function appdata_on_wishlist() {
 
 // If app has a coupon, display message
 function display_coupon_message(appid) {
-
 	var coupon_date = getValue(appid + "coupon_valid");
 	var coupon_date2 = coupon_date.match(/\[date](.+)\[\/date]/);
 	coupon_date = new Date(coupon_date2[1] * 1000);
@@ -1100,9 +1099,9 @@ function display_coupon_message(appid) {
 	"    </div>" +
 	"</div>"));
 
-    var price_div = $("[itemtype=\"http://schema.org/Offer\"]");
+    var price_div = $(".game_purchase_action:first");
 	var	cart_id = $(document).find("[name=\"subid\"]")[0].value;
-	var actual_price_container = $(price_div).find("[itemprop=\"price\"]").text().trim();
+	var actual_price_container = $(price_div).find(".price,.discount_final_price").text().trim();
 	var currency_symbol = currency_symbol_from_string(actual_price_container);
 	var currency_type = currency_symbol_to_type(currency_symbol);
 	var comma = actual_price_container.search(/,\d\d(?!\d)/);
